# botz-rs

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  antigrav.botz  blank.botz  changelog.md  dancer.botz  jumper.botz  muscles.botz  spikeball.botz  unicycle.botz  walker.botz
docs/: botz_rs.js  botz_rs_bg.wasm  index.html
src/: app.rs  lib.rs  main.rs
src/app/: vertslide.rs
