[package]
name = "botz-rs"
version = "1.1.0"
authors = ["Liam O'Connor <me@liamoc.net>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]
[dependencies]
eframe = "*"
egui = "*"
epi = "*"
[profile.release]
opt-level = 2 
